refactor: simplify column definitions and improve query formatting